# meeting-tracker

./: .env.example  .gitattributes  .gitignore  README.md  changeLog.md  plan.md  troubleshooting.md
benchmarks/detection/: README.md  conftest.py  pyproject.toml
benchmarks/detection/detect_bench/: __init__.py  cliutil.py  detect.py  grounding.py  labels.py  report.py  score.py
benchmarks/detection/fixtures/golden/: greenmart_meeting.json  payments_postmortem.json
benchmarks/detection/fixtures/pred/: greenmart_meeting.contaminated.json  greenmart_meeting.faithful.json  luma_meeting.contaminated.json  luma_meeting.faithful.json  payments_postmortem.contaminated.json  payments_postmortem.faithful.json
benchmarks/detection/fixtures/response/: greenmart_meeting.claude.txt  luma_meeting.claude.txt  payments_postmortem.claude.txt
benchmarks/detection/measurements/: README.md  greenmart_meeting.pred.json  luma_meeting.pred.json  payments_postmortem.pred.json
benchmarks/detection/tests/: test_detect.py  test_golden2_hardcase.py  test_golden3_span_tier2.py  test_grounding.py  test_labels.py  test_measured_real.py  test_report.py  test_score.py
benchmarks/stats/: PREREGISTRATION.md  README.md  conftest.py  pyproject.toml
benchmarks/stats/bench_stats/: __init__.py  boot.py  exact.py  multiplicity.py  paired.py  power.py  prereg.py  types.py  verdict.py
benchmarks/stats/tests/: test_boot.py  test_exact.py  test_measured_verdict.py  test_multiplicity.py  test_paired.py  test_power.py  test_prereg.py  test_review_fixes.py  test_types.py  test_verdict.py
benchmarks/stt/: README.md  pyproject.toml
benchmarks/stt/fixtures/golden/: budget_meeting.json  synth_budget_reversal.json
benchmarks/stt/fixtures/hyp/: budget_meeting.aws_mock.json  budget_meeting.clova_mock.json
benchmarks/stt/fixtures/synth/: budget_reversal.script.json
benchmarks/stt/stt_bench/: __init__.py  cer.py  entities.py  golden.py  korean_datetime.py  korean_numbers.py  normalize.py  render.py  report.py  score.py  synth.py
benchmarks/stt/tests/: test_cer.py  test_golden.py  test_korean_datetime.py  test_korean_numbers.py  test_regressions.py  test_regressions_r.py  test_render.py  test_report.py  test_score.py  test_synth.py
claude-docs/: learning-notes.md
docs/: data-schema.json  spec.md
pipeline/: conftest.py  pyproject.toml
pipeline/pipeline_core/: __init__.py  repository.py  state.py
pipeline/tests/: test_repository.py  test_state.py  test_wiring.py
