[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stt-bench"
version = "0.1.0"
description = "한국어 STT 벤치마크 측정 코어 — 클로바 vs AWS Transcribe (meeting-tracker 1단계 가정 검증)"
requires-python = ">=3.11"
# 런타임 의존성 0 — 표준 라이브러리(unicodedata)만 사용해 재현성 극대화.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["stt_bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
